--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -25,3 +25,80 @@ body {
 div{
     display:block;
 }
+top {
+    margin-top: 1.5em;
+}
+
+.search {
+    padding-left: 5em;
+}
+
+.i-search {
+    border-style: none;
+    border-bottom: 1px solid green;
+    padding: .375rem .75rem;
+    line-height: 1.5;
+}
+
+/*.btn {
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    border-radius: .25rem;
+    transition: color .15s
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #0d6efd;
+    border-color: #0d6efd;
+}
+
+.btn-lg {
+    background-color: #198754;
+    border-color: #198754;
+}*/
+
+.alle {
+    width: 18rem;
+    border: 2px solid rgb(224, 4, 4);
+    padding: 1.5em;
+    padding-left: 1em;
+    border-radius: 30px;
+}
+
+.top {
+    display: flex;
+    align-content: center;
+}
+
+.bottom {
+    display: flex;
+    justify-content: space-between;
+    padding: 2em;
+}
+
+.right {
+    border-radius: 10px;
+}
+
+.gezien {
+    background-color: rgb(119, 218, 119);
+    border-radius: 0.25rem;
+    padding: 0.375rem 0.75rem;
+}
+
+.right {
+    padding: 0.25em 0.5em;
