--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -14,13 +14,15 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
- 
+  margin: 0%;
 }
 .moviebutton{
     display: inline-block;
 }
-
+.eerste{
+    display: flex;
+    display: inline-block;
+}
 .apart {
     display: flex;
     width: 20%;
@@ -44,36 +46,6 @@ top {
     line-height: 1.5;
 }
 
-/*.btn {
-    display: inline-block;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    text-align: center;
-    text-decoration: none;
-    vertical-align: middle;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-    background-color: transparent;
-    border: 1px solid transparent;
-    padding: .375rem .75rem;
-    font-size: 1rem;
-    border-radius: .25rem;
-    transition: color .15s
-}
-
-.btn-primary {
-    color: #fff;
-    background-color: #0d6efd;
-    border-color: #0d6efd;
-}
-
-.btn-lg {
-    background-color: #198754;
-    border-color: #198754;
-}*/
 
 .alle {
     width: 18rem;
@@ -95,7 +67,9 @@ top {
 }
 
 .right {
+    display: flex;
     border-radius: 10px;
+    display: inline-block;
 }
 
 .gezien {
