--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -18,6 +18,16 @@
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-floating">
+                <input asp-for="Input.Voornaam" class="form-control" autocomplete="username" aria-required="true" />
+                <label asp-for="Input.Voornaam"></label>
+                <span asp-validation-for="Input.Voornaam" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.Achetrnaam" class="form-control" autocomplete="username" aria-required="true" />
+                <label asp-for="Input.Achetrnaam"></label>
+                <span asp-validation-for="Input.Achetrnaam" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
                 <label asp-for="Input.Password"></label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
