--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
-﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+﻿@using API3.Areas.Identity.Data
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<API3User> SignInManager
+@inject UserManager<API3User> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
