--- a/Views/Films/CreateCritique.cshtml
+++ b/Views/Films/CreateCritique.cshtml
@@ -11,13 +11,13 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CreateCritique">
+        <form asp-action="CreateCritique" method = "post" asp-route-id = "@ViewBag.imdbID" >
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="imdbID" class="control-label"></label>
-                <input asp-for="imdbID" class="form-control" />
-                <span asp-validation-for="imdbID" class="text-danger"></span>
+            <input type="hidden" asp-for="Id"/>
+            <div class="form-group" type="hidden">
+                @*<label asp-for="imdbID" type="hidden" class="control-label"></label>*@
+                <input asp-for="imdbID" type="hidden"  value ="@ViewBag.imdbID" class="form-control" />
+                <span asp-validation-for="imdbID" type="hidden"class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
@@ -32,7 +32,7 @@
 </div>
 
 <div>
-    <a asp-action="Details">Back to List</a>
+    <a asp-action="Details" asp-route-id ="@ViewBag.imdbID">Back to List</a>
 </div>
 
 @section Scripts {
