--- a/Views/Films/CritiqueDelete.cshtml
+++ b/Views/Films/CritiqueDelete.cshtml
@@ -23,11 +23,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.search.imdbID)
         </dd>
+         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Id)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Id)
+        </dd>
     </dl>
     
     <form asp-action="CritiqueDelete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="CritiqueDelete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
