--- a/Views/Films/CritiqueEdit.cshtml
+++ b/Views/Films/CritiqueEdit.cshtml
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="imdbID"  class="control-label"></label>
-                <input  asp-for="imdbID"  class="form-control" asp-items="ViewBag.imdbID">
-                <span type="hidden" asp-validation-for="imdbID" class="text-danger"></span>
+                @*<label asp-for="Id"  class="control-label"></label>
+                <input  asp-for="Id"  class="form-control" asp-items="ViewBag.imdbID">*@
+                <span type="hidden" asp-validation-for="Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
