--- a/Views/Films/CritiqueEdit.cshtml
+++ b/Views/Films/CritiqueEdit.cshtml
@@ -13,9 +13,9 @@
         <form asp-action="CritiqueEdit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                @*<label asp-for="Id"  class="control-label"></label>
-                <input  asp-for="Id"  class="form-control" asp-items="ViewBag.imdbID">*@
+            <div class="form-group" type="hidden">
+                <label asp-for="Id"  type="hidden" class="control-label"></label>
+                <input  asp-for="Id"  type="hidden" class="form-control" >
                 <span type="hidden" asp-validation-for="Id" class="text-danger"></span>
             </div>
             <div class="form-group">
